--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -898,29 +898,30 @@ value is interpreted as an unsigned long long value or essentially
 unlimited. The hypervisor can choose whether to reject the value or
 convert it to the maximum value allowed.
 
-=item B<blockcopy> I<domain> I<path> I<dest> [I<bandwidth>] [I<--shallow>]
-[I<--reuse-external>] [I<--raw>] [I<--blockdev>]
-[I<--wait> [I<--async>] [I<--verbose>]]
-[{I<--pivot> | I<--finish>}] [I<--timeout> B<seconds>]
+=item B<blockcopy> I<domain> I<path> { I<dest> [I<format>] [I<--blockdev>]
+| I<xml> } [I<--shallow>] [I<--reuse-external>] [I<bandwidth>]
+[I<--wait> [I<--async>] [I<--verbose>]] [{I<--pivot> | I<--finish>}]
+[I<--timeout> B<seconds>] [I<granularity>] [I<buf-size>]
 
-Copy a disk backing image chain to I<dest>. By default, this command
-flattens the entire chain; but if I<--shallow> is specified, the copy
-shares the backing chain.
+Copy a disk backing image chain to a destination.  Either I<dest> as
+the destination file name, or I<xml> as the name of an XML file containing
+a top-level <disk> element describing the destination, must be present.
+Additionally, if I<dest> is given, I<format> should be specified to declare
+the format of the destination (if I<format> is omitted, then libvirt
+will reuse the format of the source, or with I<--reuse-external> will
+be forced to probe the destination format, which could be a potential
+security hole).  The command supports I<--raw> as a boolean flag synonym for
+I<--format=raw>.  When using I<dest>, the destination is treated as a regular
+file unless I<--blockdev> is used to signal that it is a block device. By
+default, this command flattens the entire chain; but if I<--shallow> is
+specified, the copy shares the backing chain.
 
-If I<--reuse-external> is specified, then I<dest> must exist and have
+If I<--reuse-external> is specified, then the destination must exist and have
 sufficient space to hold the copy. If I<--shallow> is used in
 conjunction with I<--reuse-external> then the pre-created image must have
 guest visible contents identical to guest visible contents of the backing
 file of the original image. This may be used to modify the backing file
 names on the destination.
-
-The format of the destination is determined by the first match in the
-following list: if I<--raw> is specified, it will be raw; if
-I<--reuse-external> is specified, the existing destination is probed
-for a format; and in all other cases, the destination format will
-match the source format.  The destination is treated as a regular
-file unless I<--blockdev> is used to signal that it is a block
-device.
 
 By default, the copy job runs in the background, and consists of two
 phases.  Initially, the job must copy all data from the source, and
@@ -943,9 +944,15 @@ while longer until the job has actually cancelled.
 
 I<path> specifies fully-qualified path of the disk.
 I<bandwidth> specifies copying bandwidth limit in MiB/s. Specifying a negative
-value is interpreted as an unsigned long long value or essentially
-unlimited. The hypervisor can choose whether to reject the value or
-convert it to the maximum value allowed.
+value is interpreted as an unsigned long long value that might be essentially
+unlimited, but more likely would overflow; it is safer to use 0 for that
+purpose.  Specifying I<granularity> allows fine-tuning of the granularity that
+will be copied when a dirty region is detected; larger values trigger less
+I/O overhead but may end up copying more data overall (the default value is
+usually correct); this value must be a power of two.  Specifying I<buf-size>
+will control how much data can be simultaneously in-flight during the copy;
+larger values use more memory but may allow faster completion (the default
+value is usually correct).
 
 =item B<blockpull> I<domain> I<path> [I<bandwidth>] [I<base>]
 [I<--wait> [I<--verbose>] [I<--timeout> B<seconds>] [I<--async>]]
